@@ -628,6 +628,13 @@ img.icon {
             height: 4em;
         }
     }
+    .form-document {
+        object {
+            object-fit: scale-down;
+            object-position: center top;
+            width: 100%;
+        }
+    }
     label {
         font-weight: normal;
         display: inline;
